css/main.css
body {
  font-family: arial, helvetica, sans-serif;
  overflow-x: hidden;
}

a.anchor {
  position: relative;
  top: -50px;
  visibility: hidden;
  display: block;
}

a:focus {
  outline: none;
}

.title,
.header {
  font-weight: bold;
  font-family: 'Ubuntu', sans-serif;
}

.row {
  margin: 0;
  width: 100%;
}

.navbar {
  width: 100%;
  background-color: #fff;
  height: 87px;
  overflow-y: hidden;
  border-radius: 0;
  margin-bottom: 0;
  border-bottom: 3px solid rgba(0, 0, 0, 0.4);
  padding-right: 50px;
  -webkit-background-clip: padding;
  -moz-background-clip: padding;
  background-clip: padding-box;
}

.navbar .nav {
  float: right;
}

.navbar .navbar-brand {
  font-family: 'Fredoka One', cursive;
  font-size: 4.2em;
  padding: 3px 0 0 22px;
  max-width: none;
  color: #1685fc;
  line-height: 70px;
  text-shadow: 0 1px 5px rgba(22, 133, 252, 0.2);
}

.navbar .nav > li > a {
  font-size: 1.3em;
  padding: 32px 32px;
  color: #535353;
}

.navbar .nav .active a,
.navbar .nav .active a:focus {
  background-color: #1a1a1a;
}

.navbar-nav > .active > a,
.navbar-nav > .active > a:hover,
.navbar-nav > .active > a:focus,
.navbar .nav > li > a:focus,
.navbar .nav > li > a:hover {
  color: #2e2e2e;
  background-color: transparent;
}

.github-logo {
  z-index: 2000;
  position: fixed;
  top: 0;
  right: 0;
  border: 0;
}

.intro,
.intro-features,
.intro-screenshots,
.intro-install,
.intro-faq,
.intro-footer {
  background-image: url('../img/background.png');
  border-bottom: 1px solid rgba(255, 255, 255, 0.13);
}

.intro {
  margin-top: 20px;
  padding-top: 100px;
  padding-bottom: 110px;
  background-color: #1685fc;
}

.intro .intro-title {
  font-family: 'Fredoka One', cursive;
  font-size: 15em;
  color: #fff;
  text-shadow: 0 2px 10px rgba(255, 255, 255, 0.5);
  text-align: center;
}

.intro .intro-label {
  font-weight: 700;
  font-size: 2.5em;
  letter-spacing: 1px;
  color: #f0f0f0;
  text-shadow: 0 1px 10px rgba(255, 255, 255, 0.3);
  text-align: center;
}

.intro .intro-button-group {
  margin: 45px auto 0 auto;
  width: 485px;
}

.intro .intro-button {
  font-size: 1.4em;
  letter-spacing: 5px;
  color: #f0f0f0;
  cursor: pointer;
  display: inline-block;
  padding: 15px 0;
  background-color: rgba(255, 255, 255, 0.3);
  border-radius: 6px;
  text-align: center;
  width: 220px;
  text-decoration: none;
}

.intro .intro-button:hover {
  background-color: rgba(255, 255, 255, 0.4);
}

.intro .intro-button.first {
  margin-right: 40px;
}

.intro-features {
  background-color: #27c52e;
  padding-top: 55px;
  padding-bottom: 90px;
}

.intro-features .features-title,
.intro-screenshots .screenshots-title,
.intro-faq .faq-title {
  margin: 0 auto;
  text-align: center;
  padding-bottom: 15px;
  color: #fff;
  text-shadow: 0 1px 10px rgba(255, 255, 255, 0.3);
  font-size: 1.2em;
}

.intro-features .features-boxes {
  width: 1030px;
  margin: 0 auto;
  clear: both;
}

.intro-features .features-box {
  font-weight: 700;
  letter-spacing: 1px;
  color: #f0f0f0;
  text-shadow: 0 1px 10px rgba(255, 255, 255, 0.4);
  width: 300px;
  background-color: rgba(255, 255, 255, 0.3);
  text-align: center;
  border-radius: 6px;
  list-style-type: none;
  float: left;
  margin-right: 25px;
  margin-bottom: 25px;
  height: 220px;
}

.intro-features .features-box.last {
  margin-right: 0;
}

.intro-features .features-box .title {
  font-weight: 700;
  font-size: 1.5em;
  color: #f0f0f0;
  text-shadow: 0 1px 10px rgba(255, 255, 255, 0.4);
  background-color: rgba(0, 0, 0, 0.3);
  width: 100%;
  border-top-left-radius: 6px;
  border-top-right-radius: 6px;
  padding: 5px;
}

.intro-features .features-box .description {
  font-size: 1.2em;
  padding: 15px;
  color: #f0f0f0;
  text-align: center;
}

.intro-screenshots {
  padding-top: 55px;
  padding-bottom: 80px;
  background-color: #c52323;
}

.intro-screenshots .screenshots {
  width: 900px;
  height: 595px;
  margin: 0 auto;
  display: block;
  box-shadow: 0 0 5px #222;
}

.intro-screenshots img {
  position: absolute;
  width: 900px;
  display: block;
  opacity: 0;
  -webkit-transition: opacity 1s ease-in-out;
  -moz-transition: opacity 1s ease-in-out;
  -o-transition: opacity 1s ease-in-out;
  transition: opacity 1s ease-in-out;
}

.intro-screenshots img.current {
  opacity: 1;
}

.intro-screenshots .buttons {
  margin: 30px auto 0 auto;
  width: 140px;
  white-space: nowrap;
}

.intro-screenshots .button {
  background-color: #3f3f3f;
  border-radius: 50%;
  width: 12px;
  height: 12px;
  display: inline-block;
  margin: 0 10px;
  cursor: pointer;
}

.intro-screenshots .button:hover {
  background-color: #ffffff;
}

.intro-screenshots .button:active {
  background-color: #3f3f3f;
}

.intro-screenshots .button.current,
.intro-screenshots .button.current:hover {
  background-color: #d6d6d6;
}

.intro-install {
  padding-top: 5px;
  padding-bottom: 75px;
  background-color: #5f11b4;
}

.intro-install .title,
.intro-install .install-header {
  font-weight: 700;
  letter-spacing: 1px;
  color: #f0f0f0;
  text-shadow: 0 1px 12px rgba(255, 255, 255, 0.5);
  text-align: center;
}

.intro-install .title {
  margin-top: 75px;
  font-size:  2.5em;
}

.intro-install .install-header {
  margin-top: 35px;
  margin-bottom: 15px;
  font-size:  1.9em;
}

.intro-install pre,
.intro-faq pre {
  padding: 30px 0;
  margin: 10px auto;
  width: 550px;
  color: #ffffff;
  border: none;
  background-color: rgba(255, 255, 255, 0.10);
}

.intro-footer {
  font-size: 1em;
  padding-top: 20px;
  padding-bottom: 20px;
  letter-spacing: 1px;
  color: #fff;
  background-color: #0c9791;
  text-align: center;
}

.intro-footer a {
  color: #000;
}

.intro-footer a:active,
.intro-footer a:hover {
  color: #fff;
}

.install-buttons {
  margin: 0 auto;
  width: 590px;
  white-space: nowrap;
  border-radius: 10px;
  display: block;
}

.install-buttons button,
.install-buttons button:hover,
.install-buttons button.active,
.install-buttons button.active:hover {
  height: 80px;
  width: 33.333333%;
  background-repeat: no-repeat;
  background-position: center;
  border-radius: 6px;
  border: 0 none;
  background-color: rgba(255, 255, 255, 0.35);
  box-shadow: none;
}

.install-buttons button .label {
  position: absolute;
  top: 5px;
  right: 5px;
  background-color: #5f3496;
}

.install-buttons button:hover {
  background-color: rgba(255, 255, 255, 0.25);
}

.install-buttons button.active {
  background-color: rgba(0, 0, 0, 0.25);
}

.install-buttons button.active:hover {
  background-color: rgba(0, 0, 0, 0.25);
}

.install-buttons .digital-ocean {
  background-image: url('../img/digital-ocean.png');
}

.install-buttons .linode {
  background-image: url('../img/linode.png');
}

.install-buttons .amazon-aws {
  background-image: url('../img/amazon-aws.png');
}

.install-buttons .ubuntu,
.install-buttons .ubuntu-client {
  background-image: url('../img/ubuntu.png');
}

.install-buttons .arch {
  background-image: url('../img/arch.png');
}

.install-buttons .centos {
  background-image: url('../img/centos.png');
}

.install-buttons .windows-client {
  background-image: url('../img/windows.png');
}

.install-buttons .osx-client {
  background-image: url('../img/osx.png');
}

.install-point,
.faq-point {
  clear: both;
  width: 753px;
  padding-top: 30px;
  margin: 0 auto;
}

.install-point-label,
.faq-point-label {
  width: 50px;
  height: 50px;
  padding-top: 7px;
  border-radius: 50%;
  color: #f0f0f0;
  font-size: 1.8em;
  text-align: center;
  background-color: rgba(0, 0, 0, 0.3);
  text-shadow: 0 1px 12px rgba(255, 255, 255, 0.5);
  vertical-align: top;
  float: left;
}

.install-point-description,
.faq-point-description {
  font-weight: bold;
  width: 690px;
  background-color: rgba(255, 255, 255, 0.35);
  border-radius: 6px;
  color: #f0f0f0;
  font-size: 1.2em;
  padding: 13px;
  float: right;
}

.question .faq-point-description {
  font-size: 1.8em;
  padding: 8px 13px;
  background-color: rgba(0, 0, 0, 0.35);
}

.answer {
  padding-top: 10px;
}

.answer .faq-point-label {
  background-color: rgba(255, 255, 255, 0.35);
}

.linode-instructions,
.amazon-aws-instructions,
.arch-instructions,
.centos-instructions,
.windows-client-instructions,
.osx-client-instructions {
  display: none;
}

.install-point-description pre,
.faq-point-description pre {
  position: relative;
  top: -2px;
  display: inline;
  padding: 4px 4px 2px 4px;
  border-radius: 3px;
  background-color: rgba(0, 0, 0, 0.2);
}

.conf-instructions .install-point:first-child,
.faq .faq-point:first-child {
  padding-top: 0;
}

.intro-install a {
  color: #9cc7fd;
}

.intro-faq {
  padding-top: 55px;
  padding-bottom: 75px;
  background-color: #e6380d;
}

